--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,48 @@
-/shared
-/local-config.php
-/sql-dump-*.sql
-/db-sync
-/content/upgrade/
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
+*.template
+*.psd
+*.sublime-project
+*.sublime-workspace
+*.komodoproject
+*.esproj
+*.espressostorage
+node_modules
 .DS_Store
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+nbproject
+.hg
+.svn
+.CVS
+intermediate
+publish
+.idea
+_notes
+dwsync.xml
+.komodotools
+.env.*.php
+.env.php
+composer.phar
+composer.lock
+.sass-cache
+.htpasswd
+vendor/
+cache/
+public/wp/
+public/wp-content/plugins
+public/wp-content/themes
+public/wp-content/mu-themes
+public/wp-content/uploads
+public/local-config.php
