--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	"require": {
 		"php": ">=5.4", 
 		"johnpbloch/wordpress": "4.5", 
-		"composer/installers": "~1.0", 
+		"composer/installers": "~1.0"
 	}, 
 	"extra": {
 		"installer-paths": {
