--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 	"require": {
 		"php": ">=5.4", 
 		"johnpbloch/wordpress": "4.5", 
-		"composer/installers": "~1.0"
+		"composer/installers": "~1.0", 
+		"wpackagist-theme/twentysixteen": "1.2"
 	}, 
 	"extra": {
 		"installer-paths": {
